@@ -88,10 +88,10 @@ public class BufferedOutputFile extends OutputStream  {
 	public BufferedOutputFile(OutputParams params) {
 		this.minMemorySize = (int) (1048576 * params.minBufferSize);
 		this.maxMemorySize = (int) (1048576 * params.maxBufferSize);
-		int margin = 6000000; // Issue 220: extends to 6Mb : readCount is wrongly set cause of the ps3's
+		int margin = 20000000; // Issue 220: extends to 20Mb : readCount is wrongly set cause of the ps3's
 								// 2nd request with a range like 44-xxx, causing the end of buffer margin to be first sent 
 		if (this.maxMemorySize < margin) // for thumbnails / small buffer usage
-			margin = 600000; // margin must be superior to the buffer size of OutputBufferConsumer or direct buffer size from WindowsNamedPipe class
+			margin = 2000000; // margin must be superior to the buffer size of OutputBufferConsumer or direct buffer size from WindowsNamedPipe class
 		this.bufferOverflowWarning = this.maxMemorySize - margin;
 		this.secondread_minsize = params.secondread_minsize;
 		this.timeseek = params.timeseek;
@@ -395,6 +395,10 @@ public class BufferedOutputFile extends OutputStream  {
 	}
 	
 	private int read(boolean firstRead, long readCount, byte buf []) {
+		if (readCount > TEMP_SIZE) {
+			this.bufferOverflowWarning = maxMemorySize - 2000000;
+			PMS.info("Setting margin to 2Mb");
+		}
 		if (eof) {
 			if (readCount > writeCount)
 				return -1;
@@ -441,6 +445,10 @@ public class BufferedOutputFile extends OutputStream  {
 	}
 	
 	private int read(boolean firstRead, long readCount) {
+		if (readCount > TEMP_SIZE) {
+			this.bufferOverflowWarning = maxMemorySize - 2000000;
+			PMS.info("Setting margin to 2Mb");
+		}
 		if (eof && readCount > writeCount)
 			return -1;
 		int c = 0;
